added prof Gupta IEEE info

--- a/src/assets/html-faculty-recent-honored.html
+++ b/src/assets/html-faculty-recent-honored.html
@@ -68,7 +68,7 @@
     </div>
     <div class="card-deck">
         <div class="card">
-            <img class="logo-pic " src="/img/markovic5.jpg" alt="UCLA ECE Faculty Dejan Markovic">
+            <div class="frame"><img class="logo-pic " src="/img/markovic5.jpg" alt="UCLA ECE Faculty Dejan Markovic"></div>
 
             <div class="prof-title"> Professor</div>
             <div class="prof-name">Dejan Markovic</div>
@@ -76,6 +76,36 @@
                 <li>AIMBE, 2022.</li>
                 <li>IEEE Fellow, 2021.</li>
                 <li>NSF Career Award, 2009.</li>
+                <li></li>
+            </ul>
+        </div>        <!-- END OF CARD -->
+    </div>  <!-- end card-deck -->
+
+    <div class="spacer"><img src="/img/pixel.png"></div>
+
+    <div class="spacer"><img src="/img/pixel.png"></div>
+
+
+
+    <h3 class="page-title">IEEE</h3>
+    <div class="page-text">
+        <p  style="text-indent:0"> The <span>Institute of Electrical and Electronics Engineers </span> has announced the election of Puneet Gupta a Fellow of the Class of 2022. The IEEE is the world's largest technical professional organization dedicated to advancing technology for the benefit of humanity. It is designed to serve professionals involved in all aspects of the electrical, electronic, and computing fields and related areas of science and technology that underlie modern civilization.</p><p>
+
+        IEEE's roots go back to 1884 when electricity began to become a major influence in society. There was one major established electrical industry, the telegraph, which since the 1840s had come to connect the world with a data communications system faster than the speed of transportation. Names such as  Thomas Edison, Alexander Graham Bell and founding President Norvin Green of Western Union, saw technologies evolve from the telegraph, telephone, electric power, radio, and modern globalized communication systems of today. It has over 400,000 members in 160 countries. <span>www.ieee.org </span></p>
+
+    </div>
+    <div class="card-deck">
+        <div class="card">
+            <div class="frame"><img class="logo-pic " src="/img/puneet-gupta.jpg" alt="UCLA ECE Faculty Punet Gupta"></div>
+
+            <div class="prof-title"> Professor</div>
+            <div class="prof-name">Puneet Gupta</div>
+            <ul class="card-bottom">
+                <li>IEEE Fellow, 2022.</li>
+                <li>IBM Faculty Award, 2012</li>
+                <li>ACM/SIGDA Outstanding New Faculty Award, 2010.<li></li>
+                <li>SRC Inventor Recognition Award, 2009.</li>
+                <li>NSF CAREER Award, 2009.</li>
                 <li></li>
             </ul>
         </div>        <!-- END OF CARD -->
